# ChatApp

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  conftest.py  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  authentication.py  emails.py  managers.py  models.py  serializers.py  services.py  tasks.py  tokens.py  urls.py  views.py
backend/apps/administration/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/calls/: admin.py  apps.py  broadcast.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/apps/chat/: admin.py  apps.py  broadcast.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/apps/common/: apps.py  exceptions.py  fileserve.py  http.py  images.py  managers.py  models.py  pagination.py  views.py
backend/apps/groups/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/media/: admin.py  apps.py  models.py  processing.py  serializers.py  services.py  signing.py  tasks.py  urls.py  views.py
backend/apps/profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/realtime/: apps.py  consumers.py  middleware.py  presence.py  routing.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/docker/: entrypoint.sh
backend/requirements/: base.txt  development.txt  production.txt
(+76 files in other folders)
